--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   </head>
   <body>
     <div class="container">
+      <h1 class="title" style="color: rgba(0, 0, 0, 0.09)">SECOND ATTEMPT</h1>
       <main class="main_content">
         <div class="wallpaper"></div>
         <picture class="photo"
